k8s/rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-deployment
  namespace: so1-proyecto2
spec:
  selector:
    matchLabels:
      app: rust
  replicas: 1
  template:
    metadata:
      labels:
        app: rust
    spec:
      containers:
      - name: rust-client
        image: keviingarciah/so1_rust_client:v1.1
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"
      - name: rust-server
        image: keviingarciah/so1_rust_server:v1.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rust-service
  namespace: so1-proyecto2
spec:
  type: LoadBalancer
  ports:
  - name: rust-client-port
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: rust
